--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,16 +1,17 @@
 extends base
-//- include _reviewCard
+include _reviewCard
 
-//- block append head
-//-   script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
-//-   link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
+block append head
+  script(src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js')
+  link(href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet')
 
-//- mixin overviewBox(label, text, icon)
-//-   .overview-box__detail
-//-     svg.overview-box__icon
-//-       use(xlink:href=`/img/icons.svg#icon-${icon}`)
-//-     span.overview-box__label= label
-//-     span.overview-box__text= text
+
+mixin overviewBox(label, text, icon)
+  .overview-box__detail
+    svg.overview-box__icon
+      use(xlink:href=`/img/icons.svg#icon-${icon}`)
+    span.overview-box__label= label
+    span.overview-box__text= text
 
 block content
   section.section-header
